--- a/src/app/components/car-type/car-type.component.css
+++ b/src/app/components/car-type/car-type.component.css
@@ -46,7 +46,7 @@
     width: 100%;
     height: 620px;
     border-radius: 5px;
-    background-color: #EAEAEA;
+    background-color: white;
     box-shadow: 5px 5px;
     opacity: 0.95;
 }
@@ -62,7 +62,7 @@
 
 .btn-flex-container {
     position: relative;
-    top:97.5%;
+    top: 97.5%;
     border: solid black 1px;
     width: 100%;
     height: 35px;
@@ -93,14 +93,8 @@
     display: inline-block;
 }
 
-
-.welcomeh1 {
-    color: white;
-}
-
 input, select {
     border-radius: 4px;
-    box-shadow: 2px 2px;
     width: 220px;
     box-sizing: border-box;
     border: 1px solid black;
@@ -115,10 +109,6 @@ input, select {
 
 input:focus {
     border-color: #000;
-}
-
-form li+li {
-    margin-top: 0.7em;
 }
 
 label {
@@ -138,7 +128,8 @@ td {
 
 th {
     width: 10%;
-    background-color: #E6E6FA;
+    background-color: #E5E4E2;
+    color: black;
 }
 
 td:first-child {
@@ -176,6 +167,7 @@ tr:first-of-type {
 #adminMenuBTN:hover span {
     padding-right: 25px;
 }
+
 #adminMenuBTN:hover span:after {
     opacity: 1;
     right: 0;
@@ -185,6 +177,7 @@ tr:hover {
     background-color: #98AFC7;
     opacity: 0.8;
 }
+
 tr:focus {
     background-color: #98AFC7;
     outline: 0;
@@ -215,7 +208,6 @@ tr:focus {
     display: block;
     text-align: center;
     border-spacing: 0 0px;
-
 }
 
 .flex-feedback {
@@ -223,9 +215,10 @@ tr:focus {
     flex-direction: row;
 }
 
-.spacerDiv{ 
+.spacerDiv {
     height: 40px;
 }
+
 .spacerDivflex {
     height: 55px;
 }
@@ -246,14 +239,12 @@ tr:focus {
     height: 60px;
 }
 
-.form-group>input,select {
-    
+.form-group>input, select {
     width: 95%;
     display: flex;
     flex-direction: column;
     height: 30px;
 }
-
 
 .inputsdobandgenderDiv {
     width: 96.5%;
@@ -262,10 +253,12 @@ tr:focus {
     display: flex;
     flex-direction: row;
 }
+
 .inputsDateOfBirthDiv {
     width: 50%;
     height: 60px;
 }
+
 .inputsGenderDiv {
     width: 50%;
     height: 60px;
@@ -277,16 +270,19 @@ tr:focus {
     width: 130px;
     left: 145px;
 }
+
 #valid-feedback-date-of-birth {
     position: relative;
     width: 35px;
     left: 240px;
 }
+
 #invalid-feedback-gender {
     position: relative;
     width: 150px;
     left: 145px;
 }
+
 #valid-feedback-gender {
     position: relative;
     width: 35px;
@@ -297,54 +293,67 @@ tr:focus {
     position: relative;
     left: 50px;
 }
+
 #valid-feedback-firstName {
     position: relative;
     left: 50px;
 }
+
 #invalid-feedback-lastName {
     position: relative;
     left: 50px;
 }
+
 #valid-feedback-lastName {
     position: relative;
     left: 50px;
 }
+
 #invalid-feedback-userId {
-    position:relative;
+    position: relative;
     left: 50px;
 }
+
 #valid-feedback-userId {
-    position:relative;
+    position: relative;
     left: 50px;
 }
+
 #invalid-feedback-userName {
     position: relative;
     left: 200px;
 }
+
 #valid-feedback-userName {
     position: relative;
     left: 220px;
 }
+
 #invalid-feedback-email {
     position: relative;
     left: 220px;
 }
+
 #valid-feedback-email {
     position: relative;
     left: 250px;
 }
+
 #invalid-feedback-passWord {
     position: relative;
     left: 220px;
 }
+
 #valid-feedback-passWord {
     position: relative;
     left: 250px;
 }
+
 #invalid-feedback-role {
     position: relative;
     left: 220px;
 }
+
 #valid-feedback-role {
     position: relative;
     left: 250px;
@@ -358,6 +367,7 @@ tr:focus {
     box-sizing: border-box;
     border: 1px solid #999;
 }
+
 img {
     width: 100px;
     height: 100px;
@@ -367,12 +377,15 @@ img {
     background-position: center;
     background-size: cover;
 }
+
 #avatarinput {
     display: none;
 }
+
 #avatarLbL {
     display: none;
 }
+
 .imgPreviewDiv {
     position: absolute;
     left: 70.5%;
@@ -380,124 +393,147 @@ img {
     width: 152px;
     height: 180px;
 }
-#inputRole,#inputGender,#inputDateOfBirth {
+
+#inputRole, #inputGender, #inputDateOfBirth {
     height: 36px;
 }
 
-#orderLBLfont,#userLBLfont {
+#orderLBLfont, #userLBLfont {
     color: black;
     font-size: 12px;
 }
 
 .LBL-User-Identification-Number-positioning {
-    position:relative;
+    position: relative;
     right: 220px;
 }
+
 .LBL-Vehicle-Identification-Number-positioning {
-    position:relative;
+    position: relative;
     right: 210px;
 }
+
 .LBL-Id-of-car-positioning {
-    position:relative;
+    position: relative;
     right: 265px;
 }
+
 .LBL-Start-Date-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBL-End-Date-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBL-Actual-Return-Date-positioning {
-    position:relative;
+    position: relative;
     right: 240px;
 }
 
 .flex-LBL-gender-dateOfBirth {
     display: flex;
     flex-direction: row;
-    justify-content:space-around; 
+    justify-content: space-around;
 }
 
 .LBLFirstName-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBLlastName-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBLId-positioning {
-    position:relative;
+    position: relative;
     right: 218px;
 }
+
 .LBLuserName-positioning {
-    position:relative;
+    position: relative;
     right: 258px;
 }
+
 .LBLdateOfBirth-positioning {
-    position:relative;
+    position: relative;
     right: 110px;
 }
+
 .LBLgender-positioning {
-    position:relative;
+    position: relative;
     right: 135px;
 }
+
 .LBLemail-positioning {
-    position:relative;
+    position: relative;
     right: 270px;
 }
+
 .LBLpassWord-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBLuserRole-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
 
 #invalid-order-feedback-userId {
-    position:relative;
+    position: relative;
     left: 220px;
 }
+
 #valid-order-feedback-userId {
-    position:relative;
+    position: relative;
     left: 220px;
 }
+
 #invalid-order-feedback-vin {
-    position:relative;
+    position: relative;
     left: 220px;
 }
+
 #valid-order-feedback-vin {
-    position:relative;
+    position: relative;
     left: 220px;
 }
+
 #invalid-order-feedback-cardId {
-    position:relative;
+    position: relative;
     left: 220px;
 }
+
 #valid-order-feedback-cardId {
-    position:relative;
+    position: relative;
     left: 220px;
 }
+
 #invalid-feedback-start-date, #invalid-feedback-end-date, #invalid-feedback-actual-return-date {
-    position:relative;
+    position: relative;
     left: 220px;
 }
+
 #valid-feedback-start-date, #valid-feedback-end-date, #valid-feedback-actual-return-date {
-    position:relative;
+    position: relative;
     left: 220px;
 }
 
 .LBLCurrent-Kilometrage-positioning {
-    position:relative;
+    position: relative;
     right: 235px;
 }
+
 #invalid-feedback-Current-Kilometrage {
-    position:relative;
+    position: relative;
     left: 10px;
 }
+
 .imgPreviewCarDiv {
     position: absolute;
     left: 70.5%;
@@ -505,6 +541,7 @@ img {
     width: 152px;
     height: 180px;
 }
+
 .imgCar {
     width: 150px;
     height: 150px;
@@ -514,79 +551,98 @@ img {
     background-position: center;
     background-size: cover;
 }
-.spacerCarDiv { 
+
+.spacerCarDiv {
     height: 50px;
 }
+
 .LBL-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBL-Car-Id-positioning {
-    position:relative;
+    position: relative;
     right: 270px;
 }
+
 .LBL-Car-Type-Id-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBL-Current-Kilometrage-positioning {
-    position:relative;
+    position: relative;
     right: 235px;
 }
+
 .LBL-Usability-positioning {
-    position:relative;
+    position: relative;
     right: 265px;
 }
+
 .LBL-Availability-positioning {
-    position:relative;
+    position: relative;
     right: 260px;
 }
+
 .LBL-Vehicle-Identification-Number-positioning {
-    position:relative;
+    position: relative;
     right: 210px;
 }
+
 .LBL-branch-positioning {
-    position:relative;
+    position: relative;
     right: 270px;
 }
+
 #invalid-feedback-Current-Kilometrage-Required {
-    position:relative;
+    position: relative;
     left: 20px;
 }
+
 #invalid-feedback-Current-Kilometrage-numbers-only {
-    position:relative;
+    position: relative;
     left: 45px;
 }
+
 #invalid-feedback-Usability-Required {
-    position:relative;
+    position: relative;
     left: 20px;
 }
+
 #invalid-feedback-Usability-Letters-only {
-    position:relative;
+    position: relative;
     left: 45px;
 }
+
 #valid-feedback-Usability-Okay {
-    position:relative;
+    position: relative;
     left: 90px;
 }
+
 #invalid-feedback-Availability-required, #invalid-feedback-branch-required {
-    position:relative;
+    position: relative;
     left: 210px;
 }
+
 #invalid-feedback-Availability-Letters-only, #invalid-feedback-branch-Numbers-only {
-    position:relative;
+    position: relative;
     left: 230px;
 }
+
 #valid-feedback-Availability-Okay, #valid-feedback-Vehicle-Identification-Number-Okay, #valid-feedback-branch-Okay {
-    position:relative;
+    position: relative;
     left: 250px;
 }
+
 #invalid-feedback-Vehicle-Identification-Number-required {
-    position:relative;
+    position: relative;
     left: 150px;
 }
+
 #invalid-feedback-Vehicle-Identification-Number-Numbers-only {
-    position:relative;
+    position: relative;
     left: 220px;
 }
 
@@ -597,26 +653,32 @@ img {
     width: 152px;
     height: 180px;
 }
+
 .LBL-Car-Type-Manufacturer-positioning {
     position: relative;
     right: 255px;
 }
+
 .LBL-Car-Type-Model-positioning {
     position: relative;
     right: 270px;
 }
+
 .LBL-YearOfManufacture-positioning {
     position: relative;
     right: 235px;
 }
+
 .LBL-GearBox-positioning {
     position: relative;
     right: 265px;
 }
+
 .LBL-DailyCost-positioning {
     position: relative;
     right: 260px;
 }
+
 .LBL-DelayCost-positioning {
     position: relative;
     right: 260px;
@@ -626,14 +688,17 @@ img {
     position: relative;
     left: 30px;
 }
+
 #invalid-feedback-Manufacturer-Letters-only {
     position: relative;
     left: 30px;
 }
+
 #invalid-feedback-Model {
     position: relative;
     left: 30px;
 }
+
 #valid-feedback-Manufacturer {
     position: relative;
     left: 30px;
@@ -643,34 +708,38 @@ img {
     position: relative;
     left: 190px;
 }
+
 #invalid-feedback-GearBox-required {
     position: relative;
     left: 210px;
 }
+
 #invalid-feedback-DailyCost-daily-cost {
     position: relative;
     left: 210px;
 }
+
 #invalid-feedback-DelayCost-delay-cost {
     position: relative;
     left: 210px;
 }
+
 #invalid-feedback-Model-required {
     position: relative;
     left: 50px;
 }
 
-
 .form-control {
     width: 500px;
 }
+
 .d-flex {
     position: relative;
     left: 425px;
 }
 
-
 /*-------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
 .s003 {
     position: relative;
     min-height: -30vh;
@@ -684,16 +753,17 @@ img {
     background-color: #ffffff;
     background-size: cover;
     background-position: center center;
-    padding:10px;
+    padding: 10px;
     width: 504px;
-    border: black solid 0.5px;
     left: 500px;
 }
+
 .s003 form {
     width: 100%;
     max-width: 790px;
     margin-bottom: 0;
 }
+
 .s003 form .inner-form {
     background: #fff;
     display: -ms-flexbox;
@@ -706,9 +776,11 @@ img {
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
     border-radius: 3px;
 }
+
 .s003 form .inner-form .input-field {
     height: 58px;
 }
+
 .s003 form .inner-form .input-field input {
     height: 100%;
     background: transparent;
@@ -719,27 +791,33 @@ img {
     font-size: 16px;
     color: #555;
 }
+
 .s003 form .inner-form .input-field input.placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input:-moz-placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input::-webkit-input-placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input:hover, .s003 form .inner-form .input-field input:focus {
     box-shadow: none;
     outline: 0;
     border-color: #fff;
 }
+
 .s003 form .inner-form .input-field.first-wrap {
     width: 200px;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner {
     background: transparent;
     border-radius: 0;
@@ -752,6 +830,7 @@ img {
     align-items: center;
     padding: 10px 30px;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list.choices__list--single {
     display: -ms-flexbox;
     display: flex;
@@ -760,6 +839,7 @@ img {
     align-items: center;
     height: 100%;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__item.choices__item--selectable.choices__placeholder {
     display: -ms-flexbox;
     display: flex;
@@ -769,6 +849,7 @@ img {
     opacity: 1;
     color: #888;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list--single .choices__item {
     display: -ms-flexbox;
     display: flex;
@@ -777,10 +858,12 @@ img {
     height: 100%;
     color: #555;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
     right: 30px;
     border-color: #e5e5e5 transparent transparent transparent;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown {
     border: 0;
     background: #fff;
@@ -789,24 +872,30 @@ img {
     border-radius: 4px;
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown .choices__item--selectable {
     padding-right: 0;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item--selectable.is-highlighted {
     background: #fff;
-    color: #63c76a;
+    color: #007BFF;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item {
     color: #555;
     min-height: 24px;
 }
+
 .s003 form .inner-form .input-field.second-wrap {
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
+
 .s003 form .inner-form .input-field.third-wrap {
     width: 74px;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search {
     height: 100%;
     width: 100%;
@@ -814,24 +903,29 @@ img {
     color: #fff;
     border: 0;
     cursor: pointer;
-    background: #63c76a;
+    background: #007BFF;
     transition: all .2s ease-out, color .2s ease-out;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search svg {
     width: 16px;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search:hover {
     background: #50c058;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search:focus {
     outline: 0;
     box-shadow: none;
 }
+
 @media screen and (max-width: 992px) {
     .s003 form .inner-form .input-field {
         height: 50px;
     }
 }
+
 @media screen and (max-width: 767px) {
     .s003 form .inner-form {
         -ms-flex-wrap: wrap;
@@ -868,9 +962,3 @@ img {
         width: 100%;
     }
 }
-
-    
-
-
-
-
