--- a/src/app/components/car/car.component.css
+++ b/src/app/components/car/car.component.css
@@ -1,19 +1,3 @@
-#adminMenuBTN {
-    height: 30px;
-    width: 380px;
-    border-radius: 7px;
-    color: #007BFF;
-    background-color: black;
-}
-
-#SrchBTN {
-    height: 35px;
-    width: 200px;
-    border-radius: 7px;
-    color: #007BFF;
-    background-color: black;
-}
-
 .adminCoverDiv {
     border: solid black 1px;
     width: 100%;
@@ -29,30 +13,9 @@
     width: 100%;
     height: 635px;
     border-radius: 5px;
-    background-color: #EAEAEA;
+    background-color: white;
     box-shadow: 5px 5px;
     opacity: 0.95;
-}
-
-.carFormContentVINDiv {
-    border: black solid 1px;
-    background-color: #6D7B8D;
-    color: whitesmoke;
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-}
-
-#SrchBTN {
-    height: 35px;
-    width: 200px;
-    border-radius: 7px;
-    color: #007BFF;
-    background-color: black;
-}
-
-#formLBL {
-    color: black;
 }
 
 .btn-flex-container {
@@ -91,21 +54,6 @@
     font-style: italic;
 }
 
-input:focus {
-    border-color: #000;
-}
-
-form li+li {
-    margin-top: 0.7em;
-}
-
-label {
-    display: inline-block;
-    text-align: right;
-    white-space: nowrap;
-    color: #007BFF;
-}
-
 table {
     table-layout: fixed;
 }
@@ -116,7 +64,8 @@ td {
 
 th {
     width: 10%;
-    background-color: #E6E6FA;
+    background-color: #E5E4E2;
+    color: black;
     white-space: nowrap;
 }
 
@@ -134,6 +83,16 @@ tr:nth-of-type(odd) {
 
 tr:first-of-type {
     background-color: lightslategrey;
+}
+
+tr:hover {
+    background-color: #98AFC7;
+    opacity: 0.8;
+}
+
+tr:focus {
+    background-color: #98AFC7;
+    outline: 0;
 }
 
 img {
@@ -158,26 +117,9 @@ img {
     align-items: center;
 }
 
-#formLBL {
-    color: black;
-}
-
-.btn-flex-container {
-    border: solid black 1px;
-    width: 100%;
-    height: 35px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: #6D7B8D;
-    color: whitesmoke;
-}
-
-.btn-flex-container>button {
-    height: 65px;
-    width: 100%;
+#adminMenuBTN {
+    height: 30px;
+    width: 380px;
     border-radius: 7px;
     color: #007BFF;
     background-color: black;
@@ -208,28 +150,17 @@ img {
     right: 0;
 }
 
-tr:hover {
-    background-color: #98AFC7;
-    opacity: 0.8;
-}
-
-tr:focus {
-    background-color: #98AFC7;
-    outline: 0;
-}
-
-/* ------------------------------------------------------------------------------------ */
 .form-control {
     width: 500px;
 }
+
 .d-flex {
     position: relative;
     left: 425px;
 }
 
-
-
 /*-------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
 .s003 {
     position: relative;
     min-height: -30vh;
@@ -243,16 +174,17 @@ tr:focus {
     background-color: #ffffff;
     background-size: cover;
     background-position: center center;
-    padding:10px;
+    padding: 10px;
     width: 504px;
-    border: black solid 0.5px;
     left: 500px;
 }
+
 .s003 form {
     width: 100%;
     max-width: 790px;
     margin-bottom: 0;
 }
+
 .s003 form .inner-form {
     background: #fff;
     display: -ms-flexbox;
@@ -265,9 +197,11 @@ tr:focus {
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
     border-radius: 3px;
 }
+
 .s003 form .inner-form .input-field {
     height: 58px;
 }
+
 .s003 form .inner-form .input-field input {
     height: 100%;
     background: transparent;
@@ -278,27 +212,33 @@ tr:focus {
     font-size: 16px;
     color: #555;
 }
+
 .s003 form .inner-form .input-field input.placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input:-moz-placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input::-webkit-input-placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input:hover, .s003 form .inner-form .input-field input:focus {
     box-shadow: none;
     outline: 0;
     border-color: #fff;
 }
+
 .s003 form .inner-form .input-field.first-wrap {
     width: 200px;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner {
     background: transparent;
     border-radius: 0;
@@ -311,6 +251,7 @@ tr:focus {
     align-items: center;
     padding: 10px 30px;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list.choices__list--single {
     display: -ms-flexbox;
     display: flex;
@@ -319,6 +260,7 @@ tr:focus {
     align-items: center;
     height: 100%;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__item.choices__item--selectable.choices__placeholder {
     display: -ms-flexbox;
     display: flex;
@@ -328,6 +270,7 @@ tr:focus {
     opacity: 1;
     color: #888;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list--single .choices__item {
     display: -ms-flexbox;
     display: flex;
@@ -336,36 +279,35 @@ tr:focus {
     height: 100%;
     color: #555;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
     right: 30px;
     border-color: #e5e5e5 transparent transparent transparent;
 }
-.s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown {
-    border: 0;
-    background: #fff;
-    padding: 20px 30px;
-    margin-top: 2px;
-    border-radius: 4px;
-    box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
-}
+
 .s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown .choices__item--selectable {
     padding-right: 0;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item--selectable.is-highlighted {
     background: #fff;
     color: #63c76a;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item {
     color: #555;
     min-height: 24px;
 }
+
 .s003 form .inner-form .input-field.second-wrap {
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
+
 .s003 form .inner-form .input-field.third-wrap {
     width: 74px;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search {
     height: 100%;
     width: 100%;
@@ -373,24 +315,29 @@ tr:focus {
     color: #fff;
     border: 0;
     cursor: pointer;
-    background: #63c76a;
+    background: #007BFF;
     transition: all .2s ease-out, color .2s ease-out;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search svg {
     width: 16px;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search:hover {
-    background: #50c058;
+    background: #007BFF;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search:focus {
     outline: 0;
     box-shadow: none;
 }
+
 @media screen and (max-width: 992px) {
     .s003 form .inner-form .input-field {
         height: 50px;
     }
 }
+
 @media screen and (max-width: 767px) {
     .s003 form .inner-form {
         -ms-flex-wrap: wrap;
