--- a/src/app/components/discount/discount.component.html
+++ b/src/app/components/discount/discount.component.html
@@ -5,13 +5,14 @@
             <hr>
             <div class="form-group">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="idBTNImg" (click)="GetUser(order.userId!)"></button>
+                    <img class="btn" id="idBTNImg">
                 </div>
                 <input id="UserIdentificationNumberInput" type="text" pInputText
                     placeholder="User Identification Number" [(ngModel)]="order.userId"
                     class="form-control is-invalid is-valid" name="UserIdentificationNumber" required pattern="[0-9]+"
                     #UserIdentificationNumberInfo="ngModel" maxlength="50" minlength="9"
-                    [ngClass]="{'is-invalid': UserIdentificationNumberInfo.errors && UserIdentificationNumberInfo.touched, 'is-valid': UserIdentificationNumberInfo.valid}">
+                    [ngClass]="{'is-invalid': UserIdentificationNumberInfo.errors && UserIdentificationNumberInfo.touched, 'is-valid': UserIdentificationNumberInfo.valid}"
+                    (blur)="GetUser(order.userId!)">
                 <div class="invalid-feedback" id="invalid-feedback-UserIdentificationNumber-Required"
                     [hidden]="!UserIdentificationNumberInfo.errors?.required">
                     User Identification Number Required
@@ -36,7 +37,7 @@
                         required #sd="ngbDatepicker" #startDateInfo="ngModel"
                         [ngClass]="{'is-invalid': startDateInfo.errors && startDateInfo.touched, 'is-valid': startDateInfo.valid}"
                         (change)="setStartDate($event)" (dateSelect)="onStartDateSelect($event)">
-                        
+
                     <div class="invalid-feedback" id="invalid-feedback-startDate-Required"
                         [hidden]="!startDateInfo.errors?.required">
                         Start Date Required
@@ -56,7 +57,7 @@
                         #endDateInfo="ngModel"
                         [ngClass]="{'is-invalid': endDateInfo.errors && endDateInfo.touched, 'is-valid': endDateInfo.valid}"
                         (change)="setEndDate($event)" (dateSelect)="onEndDateSelect($event)">
-                        
+
                     <div class="invalid-feedback" id="invalid-feedback-endDate-Required"
                         [hidden]="!endDateInfo.errors?.required">
                         End Date Required
@@ -68,24 +69,24 @@
             </div>
             <div class="flex-container-total">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary calendar" id="totalIMg" type="button"></button>
+                    <img class="btn" id="totalIMg">
                 </div>
                 <div class="p-inputgroup">
-                    <input type="text" value="Total of {{TotalRentalDays(order.startDate!, order.endDate!)}} days" pInputText
-                        placeholder="Total number of rental days" disabled="true">
+                    <input type="text" value="Total of {{TotalRentalDays(order.startDate!, order.endDate!)}} days"
+                        pInputText placeholder="Total number of rental days" disabled="true">
                 </div>
             </div>
             <div class="spacerDiv"></div>
             <div class="form-group">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="vinBTNImg"
-                        (click)="GetCar(order.vin!)"></button>
+                    <img class="btn" type="button" id="vinBTNImg">
                 </div>
                 <input id="VehicleIdentificationNumberInput" type="text" [(ngModel)]="order.vin"
                     class="form-control is-invalid is-valid flex-feedback" name="VehicleIdentificationNumber" required
                     pattern="[0-9]+" #VehicleIdentificationNumberInfo="ngModel"
                     placeholder="Vehicle Identification Number..." maxlength="50"
-                    [ngClass]="{'is-invalid': VehicleIdentificationNumberInfo.errors && VehicleIdentificationNumberInfo.touched,'is-valid': VehicleIdentificationNumberInfo.valid}">
+                    [ngClass]="{'is-invalid': VehicleIdentificationNumberInfo.errors && VehicleIdentificationNumberInfo.touched,'is-valid': VehicleIdentificationNumberInfo.valid}"
+                    (blur)="GetCar(order.vin!)">
                 <div class="invalid-feedback" id="invalid-feedback-Vehicle-Identification-Number-required"
                     [hidden]="!VehicleIdentificationNumberInfo.errors?.required">
                     Vehicle Identification Number is required
@@ -102,25 +103,27 @@
 
             <div class="flex-container-total">
                 <div class="input-group-append">
-                    <button class="btn btn-outline-secondary calendar" id="totalCostIMg" type="button" ></button>
+                    <img class="btn" id="totalCostIMg" type="button">
                 </div>
                 <div class="p-inputgroup">
                     <input type="text" pInputText placeholder="Total Cost" disabled="true"
                         value="{{CalculateTotalPrice()}}$" #priceInfo>
                 </div>
             </div>
-            <div class="warningPopUp"> 
-                <ngb-alert class="mt-3 mb-0 ngbPopUP" type="info" [dismissible]="false" [hidden]="!VehicleIdentificationNumberInfo.touched || VehicleIdentificationNumberInfo.errors">
-                    Warning: there is a fee of {{carType.delayCost}}$ for every day you extend your rental period for the selected car...
+            <div class="warningPopUp">
+                <ngb-alert class="mt-3 mb-0 ngbPopUP" type="info" [dismissible]="false"
+                    [hidden]="!VehicleIdentificationNumberInfo.touched || VehicleIdentificationNumberInfo.errors">
+                    Warning: there is a fee of {{carType.delayCost}}$ for every day you extend your rental period for
+                    the selected car...
                 </ngb-alert>
             </div>
         </form>
         <div class="btnDiv">
             <button pButton pRipple type="button" label="Submit" class="p-button-raised"
-            [disabled]="SubmitOrderForm.form.invalid" (click)="SubmitOrder()"></button>
+                [disabled]="SubmitOrderForm.form.invalid" (click)="SubmitOrder()"></button>
         </div>
     </div>
-    
+
     <div class="carouselDiv">
         <ngb-carousel *ngIf="images">
             <ng-template ngbSlide>
