--- a/src/app/components/users/users.component.css
+++ b/src/app/components/users/users.component.css
@@ -26,28 +26,18 @@
     color: #007BFF;
     background-color: black;
 }
-#SrchBTN {
-    height: 35px;
-    width: 200px;
-    border-radius: 7px;
-    color: #007BFF;
-    background-color: black;
-}
-#formLBL {
-    color: black;
-}
 
 .usersFormContentDiv {
     position: relative;
     width: 100%;
     height: 620px;
     border-radius: 5px;
-    background-color: #EAEAEA;
+    background-color: white;
     box-shadow: 5px 5px;
     opacity: 0.95;
 }
 
-.carTypeFormContentVINDiv, .usersFormContentVINDiv, .ordersFormContentVINDiv {
+.usersFormContentVINDiv {
     border: black solid 1px;
     background-color: #6D7B8D;
     color: whitesmoke;
@@ -109,7 +99,6 @@
 
 input, select {
     border-radius: 4px;
-    box-shadow: 2px 2px;
     width: 220px;
     box-sizing: border-box;
     border: 1px solid black;
@@ -126,17 +115,6 @@ input:focus {
     border-color: #000;
 }
 
-form li+li {
-    margin-top: 0.7em;
-}
-
-label {
-    display: inline-block;
-    text-align: right;
-    white-space: nowrap;
-    color: #007BFF;
-}
-
 table {
     table-layout: fixed;
 }
@@ -147,7 +125,8 @@ td {
 
 th {
     width: 10%;
-    background-color: #E6E6FA;
+    background-color:#E5E4E2;
+    color:black;
 }
 
 td:first-child {
@@ -218,8 +197,6 @@ tr:focus {
     left: 425px;
 }
 
-
-
 /*-------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 .s003 {
     position: relative;
@@ -236,7 +213,6 @@ tr:focus {
     background-position: center center;
     padding:10px;
     width: 504px;
-    border: black solid 0.5px;
     left: 500px;
 }
 .s003 form {
@@ -364,14 +340,14 @@ tr:focus {
     color: #fff;
     border: 0;
     cursor: pointer;
-    background: #63c76a;
+    background: #007BFF;
     transition: all .2s ease-out, color .2s ease-out;
 }
 .s003 form .inner-form .input-field.third-wrap .btn-search svg {
     width: 16px;
 }
 .s003 form .inner-form .input-field.third-wrap .btn-search:hover {
-    background: #50c058;
+    background: #007BFF;
 }
 .s003 form .inner-form .input-field.third-wrap .btn-search:focus {
     outline: 0;
