--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -67,7 +67,7 @@
         </div>
         <div class="btn-flex-container" style="position: absolute; bottom: 0;">
             <button id="adminMenuBTN" (click)="DeleteUser()"> <span> Delete </span> </button>
-            <button id="adminMenuBTN"> <span > Edit </span> </button>
+            <button id="adminMenuBTN" routerLink="/editUserForm/{{selected}}" routerLinkActive="active"> <span > Edit </span> </button> 
             <button id="adminMenuBTN" routerLink="/UpdateUserForm/{{selected}}" routerLinkActive="active"> <span > Update </span> </button>
             <button id="adminMenuBTN" routerLink="/AddUserForm" routerLinkActive="active"> <span> Add </span> </button>
         </div>
