--- a/src/app/components/edit-car-type-form/edit-car-type-form.component.css
+++ b/src/app/components/edit-car-type-form/edit-car-type-form.component.css
@@ -200,7 +200,7 @@ img {
     width: 150px;
     height: 150px;
     opacity: 100%;
-    background-image: url(../../../assets/images.png);
+    background-image: url(../../../assets/default_car.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
