--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,7 @@
     </li>
     <li class="nav-item Tab navBar" *ngIf="user?.role === 'Agent'">
         <a class="nav-link active" routerLink="/agentsSignIn" routerLinkActive="active"> <span>
-                For Agents </span> </a>
+                Agents </span> </a>
     </li>
     <li class="nav-item Tab navBar" *ngIf="user?.role === 'Admin'">
         <a class="nav-link active" routerLink="/administrationSignIn" routerLinkActive="active"> <span>
