--- a/src/app/components/administration-sign-in/administration-sign-in.component.css
+++ b/src/app/components/administration-sign-in/administration-sign-in.component.css
@@ -2,7 +2,7 @@
     border: solid black 1px;
     width: 100%;
     height: 640px;
-    background-image: url(../../../assets/imgonline-com-ua-resize-vkWVRMwkLM7AOIZ.jpg);
+    background-image: url(../../../assets/welcome.jpg);
     background-repeat: no-repeat;
     background-position: 0% 75%;
     background-size: cover;
