--- a/src/app/components/administration-sign-in/administration-sign-in.component.html
+++ b/src/app/components/administration-sign-in/administration-sign-in.component.html
@@ -18,7 +18,7 @@
     <br><br><br><br><br><br><br><br><br><br>
     <header>
         <div class="overlay">
-            <h1>Welcome To Administration Area</h1>
-        </div>
+            <h1>Administration Area</h1>
+        </div>]
     </header>
 </div>
