--- a/src/app/components/catalogue/catalogue.component.css
+++ b/src/app/components/catalogue/catalogue.component.css
@@ -10,17 +10,59 @@
 }
 
 .searchBarDiv {
-    border: solid black 1px;
-    background-color: white;
     width: 100%;
     height: 60px;
 }
 
 .previousSearchDiv {
-    border: solid black 1px;
-    background-color: #2C3539;
+    background-color: #BCC6CC;
     width: 100%;
-    height: 430px;
+    height: 660px;
+}
+
+.product-item {
+    background-color: #BCC6CC;
+    width: 460px;
+}
+
+.product-item-content {
+    border: 1px solid var(--surface-d);
+    border-radius: 3px;
+    margin: .3rem;
+    text-align: center;
+    padding: 2rem 0;
+    background-color: #E5E4E2;
+}
+.product-image {
+    width: 200px;
+    height: 250px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23)
+}
+
+#orderNowID {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    background-image: url(../../../assets/orderNow2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border: none;
+}
+
+.p-button-rounded {
+    width: 120px;
+    height: 40px;
+    white-space: nowrap;
+}
+
+.visibility {
+    display: none;
+}
+
+#btnCarouselOrder {
+    width: 200px;
+    height: 25px;
 }
 
 table {
@@ -64,13 +106,6 @@ tr:focus {
     outline: 0;
 }
 
-.carouselCarShow {
-    background-color: #E5E4E2;
-    border: black solid 1px;
-    width: 450px;
-    height: 350px;
-}
-
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
 .s003 {
@@ -88,11 +123,13 @@ tr:focus {
     background-position: center center;
     padding: 15px;
 }
+
 .s003 form {
     width: 100%;
     max-width: 790px;
     margin-bottom: 0;
 }
+
 .s003 form .inner-form {
     background: #fff;
     display: -ms-flexbox;
@@ -105,9 +142,11 @@ tr:focus {
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
     border-radius: 3px;
 }
+
 .s003 form .inner-form .input-field {
     height: 58px;
 }
+
 .s003 form .inner-form .input-field input {
     height: 100%;
     background: transparent;
@@ -118,27 +157,33 @@ tr:focus {
     font-size: 16px;
     color: #555;
 }
+
 .s003 form .inner-form .input-field input.placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input:-moz-placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input::-webkit-input-placeholder {
     color: #888;
     font-size: 16px;
 }
+
 .s003 form .inner-form .input-field input:hover, .s003 form .inner-form .input-field input:focus {
     box-shadow: none;
     outline: 0;
     border-color: #fff;
 }
+
 .s003 form .inner-form .input-field.first-wrap {
     width: 200px;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner {
     background: transparent;
     border-radius: 0;
@@ -151,6 +196,7 @@ tr:focus {
     align-items: center;
     padding: 10px 30px;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list.choices__list--single {
     display: -ms-flexbox;
     display: flex;
@@ -159,6 +205,7 @@ tr:focus {
     align-items: center;
     height: 100%;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__item.choices__item--selectable.choices__placeholder {
     display: -ms-flexbox;
     display: flex;
@@ -168,6 +215,7 @@ tr:focus {
     opacity: 1;
     color: #888;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__inner .choices__list--single .choices__item {
     display: -ms-flexbox;
     display: flex;
@@ -176,10 +224,12 @@ tr:focus {
     height: 100%;
     color: #555;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices[data-type*="select-one"]:after {
     right: 30px;
     border-color: #e5e5e5 transparent transparent transparent;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown {
     border: 0;
     background: #fff;
@@ -188,24 +238,30 @@ tr:focus {
     border-radius: 4px;
     box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list.choices__list--dropdown .choices__item--selectable {
     padding-right: 0;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item--selectable.is-highlighted {
     background: #fff;
     color: #63c76a;
 }
+
 .s003 form .inner-form .input-field.first-wrap .choices__list--dropdown .choices__item {
     color: #555;
     min-height: 24px;
 }
+
 .s003 form .inner-form .input-field.second-wrap {
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
+
 .s003 form .inner-form .input-field.third-wrap {
     width: 74px;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search {
     height: 100%;
     width: 100%;
@@ -216,21 +272,26 @@ tr:focus {
     background: #63c76a;
     transition: all .2s ease-out, color .2s ease-out;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search svg {
     width: 16px;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search:hover {
     background: #50c058;
 }
+
 .s003 form .inner-form .input-field.third-wrap .btn-search:focus {
     outline: 0;
     box-shadow: none;
 }
+
 @media screen and (max-width: 992px) {
     .s003 form .inner-form .input-field {
         height: 50px;
     }
 }
+
 @media screen and (max-width: 767px) {
     .s003 form .inner-form {
         -ms-flex-wrap: wrap;
@@ -267,6 +328,7 @@ tr:focus {
         width: 100%;
     }
 }
+
 .selectSearchType {
     border: none;
     width: 75%;
